chore(memory): snapshot current memory system and ui workspace